--- a/apps/fui/src/styles/local/partials/2-components/scrollbar-vertical.scss
+++ b/apps/fui/src/styles/local/partials/2-components/scrollbar-vertical.scss
@@ -1,48 +1,47 @@
 /* vertical scrollbar */
 .scrollbar-vertical,
-div[role='listbox'] {
+ul[role='listbox'] {
     cursor: default;
     -ms-overflow-style: auto;
-    // only works on Firefox, but future proofing
-    scrollbar-color: var(--background-neutral, #6b6b6b) var(--primary, #9750dd);
+    scrollbar-color: var(--primary, #9750dd) var(--background-neutral, #6b6b6b);
     scrollbar-width: thin;
 }
 
 .scrollbar-vertical::-webkit-scrollbar,
-div[role='listbox']::-webkit-scrollbar {
+ul[role='listbox']::-webkit-scrollbar {
     width: 8px;
     resize: none;
 }
 
 .scrollbar-vertical::-webkit-scrollbar-track,
-div[role='listbox']::-webkit-scrollbar-track {
+ul[role='listbox']::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background: var(--background-neutral, #6b6b6b);
     border-radius: 12px;
 }
 
-div[role='listbox']::-webkit-scrollbar-thumb,
-.scrollbar-vertical::-webkit-scrollbar-thumb {
+.scrollbar-vertical::-webkit-scrollbar-thumb,
+ul[role='listbox']::-webkit-scrollbar-thumb {
     border-radius: 12px;
     background-color: var(--text, #ecedee);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-div[role='listbox']::-webkit-scrollbar-thumb:hover,
+ul[role='listbox']::-webkit-scrollbar-thumb:hover,
 .scrollbar-vertical::-webkit-scrollbar-thumb:hover {
     background-color: var(--primary, #9750dd);
 }
 
 /* remove the bottom corner + resizer for a cleaner aesthetic*/
 
-div[role='listbox']::-webkit-resizer,
+ul[role='listbox']::-webkit-resizer,
 .scrollbar-vertical::-webkit-resizer {
     visibility: hidden;
     display: none;
     opacity: 0;
 }
 
-div[role='listbox']::-webkit-scrollbar-corner,
+ul[role='listbox']::-webkit-scrollbar-corner,
 .scrollbar-vertical::-webkit-scrollbar-corner {
     visibility: hidden;
     display: none;
